Name:         Lbach
Version:      0.1
Synopsis:     A haskel version of the Tiny language compiler originally by Jack Crenshaw.
Description:  See <http://alephnullplex.appspot.com/blog/view/2010/01/12/lbach-1-introduction> for full description.
Homepage:     http://alephnullplex.appspot.com/blog/tags/lbach
License:      MIT
License-file: LICENSE
Author:       Geoff Ford
Maintainer:   g_ford@hotmail.com
Copyright:    Geoff Ford 2010

Category:      Compiler
Build-type:    Custom
Cabal-version: >=1.4

source-repository head
  type: git
  location: http://github.com/alephnullplex/cradle.git
  branch: master

flag test
  description: Build the tests
  default: False

flag benchmarks
  description: Build the benchmarks
  default: False

flag hpc
  description: Use HPC for tests
  default: True

executable Lbach
  main-is: Lbach.hs  
  hs-source-dirs: src
  
  build-depends: 
    haskell98,
    base >= 4,
    mtl >= 1.1
    
executable test
  main-is: Run.hs
  hs-source-dirs: src 
  
  if !flag(test)
    buildable: False
  else
    if flag(hpc)
      ghc-options: -fhpc
      x-hpc: true
    ghc-options: -Wall
    build-depends:
      base >= 4,
      mtl >= 1.1,
      test-framework >= 0.3 && < 0.4,
      test-framework-quickcheck2 >= 0.2.8 && < 0.3,
      test-framework-hunit >= 0.2.6 && < 0.3, 
      QuickCheck >= 2.3 && < 2.4,
      HUnit >= 1.2 && < 1.3
    other-modules:
      Lbach.Tests.Parser.Expressions  
  